Fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -226,7 +226,7 @@
     }
 
     .bulletpoints {
-        padding-left: 0;
+        padding: 0;
 		list-style-type: disc;
     }
 
